jpg/text parameters
 -Change jpg/text parameters.
 -Add changelog
text enc/dec
 0e0d8cc
 Change text encode. Lower case conversion on most words
pre11
 019a9a7
 Make VM bounds checks as command line options.
pre10
 09d3312
 Fix test3exe.cfg, decompression was not identical. Local variables are random initzialized.
pre9
5a35ea8
 Change mixer prediction shift, adjust cfg files
 Add Sk component
 Use Sk in matchMod function in cfg files
 Adjust test3txt.cfg APM components
 Use Squash/Stretch from paq8px_v205
 Update help screen
pre8
 93c0c76
 Add parameter tuning for components
 Add StationaryMap component
 Fix memory leaks
 In cfg allow enum value used as array init value. Allow Or operator.
 Add compile time option to disable runtime/cfg compile time array bounds checks.
 Add text cfg file
 Add exe cfg file
 Change text detection, allow a bit more binary data
 Tune most cfg files component parameters
 Update help screen
pre7
 e4bcd02
 -remove StateMap class and use struct version instead
 -adjust help screen
 -fix vm component init on mixer
pre7
 fe0ced2
 -use limit in mixer update
 -adjust some models for mixer update
pre6
 c06467b
 -use precalculated table in:
 ContextMap mix2
 ContextMap and RunContextMap run prediction
remove level option
 22a70e0
 -remove level option, all memory usage is defined in cfg files. Defaults to -8.
pre5
 710400e
 -remove file class
 -remove programmchecker class, use peakmemory instead
 -remove more unused code
v17
 3a32e16
 -make most components as structs
 -fix im24 end detection
 -clean up useless code
 -change ContextMap
pre4
 79ac6fc
 cleanup
 add contexts
pre3
 003f759
 fix DHS
pre2
 fb77800
 - fix jpeg.cfg pre1 commit
 - fix vm.cpp pre1 commit
pre1
 14bd42a
 - chamge MM
 - change jpeg.cfg
 - global variable assignment


small fixes
 5acf9dd
 JIT fix: in ENT change push location
 optimize ENT if blank proc
 remove try ... catch
update im4,jpeg cfg
 0b15136
 update im4
 update jpeg
change detection
 22624cd
 change detection