@@ -16,7 +16,7 @@ int Misses;
 int m_e[14]={158, 1733, 2163, 1547, 749, 240, 354, 565, 925, 1687, 714, 796, 36, 55};
 int m_s[14]={126, 14, 60, 4, 61, 67, 67, 68, 9, 250, 126, 15, 25, 7};
 int m_m[14]={16, 27, 29, 24, 21, 17, 19, 45, 24, 24, 35, 19, 27, 4};
-int m_sm[25]={};
+int m_sm[32]={};
 
 int zzu[64]={  // zigzag coef -> u,v
   0,1,0,0,1,2,3,2,1,0,0,1,2,3,4,5,4,3,2,1,0,0,1,2,3,4,5,6,7,6,5,4,
@@ -403,7 +403,7 @@ int jpegModel(int bpos,int y) {
       jassert(comp>=0 && comp<4,23);
       pred[comp]=pred[comp]+x;
       dc=pred[comp];
-      jassert((cpos&63)==0,24);
+      while (cpos&63) cpos++;
       cbuf2[cpos&0x1FFFF]=dc;
       cbuf[(cpos++)&0x1FFFF]=(dc+1023)>>3;
       if ((mcupos>>6)==0) {
@@ -556,9 +556,9 @@ int jpegModel(int bpos,int y) {
   cxt[19]=hash4(++i, lcp[0]/40 , lcp[1]/40 , adv_pred[1]/28);
   cxt[20]=hash5(++i, ccount>1?((zv<<8)|zu):zv,cbuf[(cpos-blockN[mcupos>>6])&0x1FFFF],adv_pred[2]/28, run_pred[2]);
   cxt[21]=hash5(++i, ccount>1?((zv<<8)|zu):zu,  cbuf[(cpos-blockW[mcupos>>6])&0x1FFFF], adv_pred[0]/28, run_pred[0]);
-  cxt[22]=hash3(i, adv_pred[2]/7, run_pred[2]);
-  cxt[23]=hash3(i, adv_pred[0]/7, run_pred[0]);
-  cxt[24]=hash3(i, adv_pred[1]/7, run_pred[1]);
+  cxt[22]=hash4(i, adv_pred[2]/7,adv_pred1[2]/7, run_pred[2]);
+  cxt[23]=hash4(i, adv_pred[0]/7,adv_pred1[0]/7, run_pred[0]);
+  cxt[24]=hash4(i, adv_pred[1]/7,adv_pred1[1]/7, run_pred[1]);
   cxt[25]=hash5(++i, ccount>1?((zv<<8)|zu):zv, lcp[1]/14, adv_pred[2]/16, run_pred[5]);
   cxt[26]=hash5(++i, ccount>1?((zv<<8)|zu):zu, lcp[0]/14, adv_pred[0]/16, run_pred[3]);
   cxt[27]=hash4(++i, lcp[0]/14, lcp[1]/14, adv_pred[3]/16);
@@ -580,7 +580,7 @@ int jpegModel(int bpos,int y) {
   else if (hbcount==1) { huc=1+(huffcode&1)*3; vmx(DHS,0,   huc);}
   else                 { huc=1+(huffcode&1);   vmx(DHS,0,   huc);}
   if (hbcount==0) {
-  vmx(SM, 0,hash3(hc>> 2,coef, adv_pred[0]/11));
+      vmx(SM, 0,hash3(hc>> 2,coef, adv_pred[0]/11));
       vmx(SM, 1,hash3(hc>> 2,coef, adv_pred[1]/11));
       vmx(SM, 2,hash3(hc>> 2,coef, adv_pred[2]/11));
       vmx(SM, 3,hash3(hc>> 2,coef, adv_pred[3]/11));
@@ -615,6 +615,13 @@ int jpegModel(int bpos,int y) {
       vmx(SM,22,hash3(hc>> 2, adv_pred[1]/16,prev_coef/42));
       vmx(SM,23,hash3(hc>> 2, adv_pred[2]/16,prev_coef/42));
       vmx(SM,24,hash3(hc>> 2, adv_pred[3]/16,prev_coef/42));
+      vmx(SM,25,hash3(hc>> 2,rs1,run_pred[0]));
+      vmx(SM,26,hash3(hc>> 2,rs1,run_pred[1]));
+      vmx(SM,27,hash3(hc>> 2,rs1,run_pred[2]));
+      vmx(SM,28,hash3(hc>> 2,rs1,run_pred[3]));
+      vmx(SM,29,hash3(hc>> 2,lcp[0]/14, lcp[1]/14));
+      vmx(SM,30,hash3(hc>> 2,lcp[2]/14, lcp[3]/14));
+      vmx(SM,31,hash3(hc>> 2,lcp[3]/14, lcp[4]/14));
   }
   vmx(SMC,3,hc&0xffff); 
   vmx(MX,0,column==0);
@@ -696,7 +703,7 @@ int main() {
   N=38;
   NN=N*3;
   // SMC=1,APM1,DS,AVG,SCM,RCM,CM,MX,ST,MM,DHS,SM
-  vms(  2+1+1,   2+1,   0,  1,  0,  0, 1, 7+4+3,  1,6+4+1+N+N+N+3,1,9+5+3+4+4,0); 
+  vms(  2+1+1,   2+1,   0,  1,  0,  0, 1, 7+4+3,  1,6+4+1+N+N+N+3,1,9+5+3+4+4+4+3,0); 
   vmi(ST,0,144,0,0);
   vmi(CM,0,2,7-1,0);  
   vmi(ST,0,136,0,1);
@@ -708,7 +715,7 @@ int main() {
   vmi(SMC,1,0x10000,1023,0);
   vmi(SMC,2, 0x2000,1023,1);
   vmi(SMC,3,0x10000,1023,0);
-  for (i=0;i<25;i++) vmi(SM,i,16,3+256*m_sm[i],0);
+  for (i=0;i<25+7;i++) vmi(SM,i,16,3+256*m_sm[i],0);
 
   //jpeg
   vmi(MX,0,m_s[0] +256*m_e[0]+0x1000000*m_m[0],  2 ,1);  vmi(MM,NN,0,N,3);
