@@ -17,11 +17,12 @@ int mtt[16]= { 0,0,1,2,3,4,5,5,6,6,6,6,7,7,7,7 };
 
 int primes[14]={ 0, 257,251,241,239,233,229,227,223,211,199,197,193,191 };
 int il[65536]={};
-int m_e[9]={574, 275, 344, 17, 94, 287, 282, 359, 14}; // tuned on dickens
-int m_s[9]={2, 16, 35, 28, 12, 30, 31, 29, 5};// tuned on dickens
-int m_m[9]={22, 25, 16, 36, 27, 22, 26, 26, 27};// tuned on dickens
-int c_r[18]={4, 3, 4, 2, 2, 7, 2, 8, 2, 2, 4, 4, 5, 3, 4,0,0,0};// tuned on dickens
-int c_s[18]={35, 36, 41, 36, 33, 33, 40, 35, 28, 35, 36, 33, 34, 40, 39,0,0,0};// tuned on dickens
+// tuned on dickens
+int m_e[9]={574, 275, 344, 17, 94, 287, 282, 359, 14}; // mixer error
+int m_s[9]={2, 16, 35, 28, 12, 30, 31, 29, 5};// mixer shift
+int m_m[9]={22, 25, 16, 36, 27, 22, 26, 26, 27};// mixer error mul
+int c_r[21]={4, 3, 4, 2, 2, 7, 2, 6, 2, 2, 4, 4, 5, 3, 4, 4, 4, 4, 4, 4, 4};// contextmap run mul
+int c_s[21]={34, 37, 43, 33, 33, 34, 39, 32, 30, 37, 35, 38, 34, 40, 37, 32, 35, 31, 37, 36, 36};// contextmap pr mul
 
   int MAXLEN=2047; // longest allowed match + 1
   int tm[0x100000]={};    // hash table of pointers to contexts
@@ -91,7 +92,6 @@ int matchMod(int y,int bpos){
             }
             tm[h]=pos;  // update hash table
                 //if (len>3 ) printf("pos=%d len=%d ptr=%d\n", pos, len, ptr);
-            //vmx(SCM, 5, pos);
     }
     // predict match
     if (len && buf(1)==bufr(ptr-1)){
@@ -138,13 +138,11 @@ int update(int y,int c0,int bpos,int c4,int pr){
     for (i=13; i>0; --i)  // update order 0-11 context hashes
     t[i]=t[i-1]*primes[i]+c1;
     xi=0;
-    for (i=0; i<7; ++i)
+    for (i=1; i<6; ++i)
     vmx(CM, xi,t[i]); // set context to CM(0)
-    vmx(RCM,0,t[7]); // ...
-    vmx(CM, xi,t[8]);
+    vmx(RCM,0,t[7]);
     vmx(RCM,1,t[10]);
     vmx(RCM,2,t[12]);
-    vmx(CM, xi,t[13]);
 
     f1=0;
     c=c1;
@@ -426,6 +424,13 @@ vmx(CM, xi,col<<16|(c1)<<8|above);
     vmx(CM, xi,h+word1*73+word3*61);
     xi++;
     vmx(CM, xi,h+word1*79+word2*71);
+    xi++;
+    vmx(CM, xi,t[6]);
+    xi++;
+    vmx(CM, xi,t[8]);
+    xi++;
+    vmx(CM, xi,t[13]);
+
     if (f1) {
         word4=word3*31;
         word3=word2*37;
@@ -463,17 +468,17 @@ void block(int a,int b) {
 int main() { 
 int i,x;
   //SMC,APM1,DS,AVG,SCM,RCM,CM,MX,ST,MM,DHS,SM
-  vms( 0,3,0,2,5,3,11+1+1+1+1+1+2,9+1-1-1,1,9-1,0,0,1);
+  vms( 0,3,0,2,5,3,21,8,1,8,0,0,1);
   vmi(ST,0,144,0,0);
   vmi(SK,0,0,0,0);
   vmi(RCM,0,1024,0,0); //RCM(0) mem/4
   vmi(RCM,1,1024,0,0); //RCM(1) mem/4 400000 4194304/4096=1024
   vmi(RCM,2,2048,0,0); //RCM(2) mem/2 800000 8388608/4096=2048
-  vmi(CM,0,32*4096,9+c_s[0]*0x10000+256*c_r[0],0);  //CM(0) mem*32, 9 contexts //normal
+  vmi(CM,0,8*4096,5+c_s[0]*0x10000+256*c_r[0],0);  //CM(0) mem*32, 9 contexts //normal
   vmi(CM,1,1*4096,6+c_s[1]*0x10000+256*c_r[1],0);   //indirect 1000000 /4096=4096
-  vmi(CM,2,4*4096,26+1+4+1+ c_s[2]*0x10000+256*c_r[2],0); //wordmodel
+  vmi(CM,2,4*4096,32+ c_s[2]*0x10000+256*c_r[2],0); //wordmodel
   vmi(CM,3,2*4096,8+c_s[3]*0x10000+256*c_r[3],0);  //sparse
-  vmi(CM,4,4096/2 ,3+c_s[4]*0x10000+256*c_r[4],0); //record
+  vmi(CM,4,4096/2,3+c_s[4]*0x10000+256*c_r[4],0); //record
   vmi(CM,5,4096/2,3+c_s[5]*0x10000+256*c_r[5],0);  //record
   vmi(CM,6,1*4096,3+c_s[6]*0x10000+256*c_r[6],0);   //record
   vmi(CM,7,2*4096,3+c_s[7]*0x10000+256*c_r[7],0);   //record
@@ -482,14 +487,16 @@ int i,x;
   vmi(CM,10,4096,4+c_s[10]*0x10000+256*c_r[10],0);
   vmi(CM,11,16*4096,5+c_s[11]*0x10000+256*c_r[11],0);// wordX
   vmi(CM,12,4*4096,6+c_s[12]*0x10000+256*c_r[12],0);// word
-  vmi(CM,13,2*4096,4-3+c_s[13]*0x10000+256*c_r[13],0);// words
-  vmi(CM,14, 4096,1+c_s[14]*0x10000+256*c_r[14],0);// w4
-  vmi(CM,15, 2*4096,1+c_s[15]*0x10000+256*c_r[15],0);// w4
-  vmi(CM,16,2* 4096,1+c_s[16]*0x10000+256*c_r[16],0);// w4
-  vmi(CM,17,2* 4096,1+c_s[17]*0x10000+256*c_r[17],0);// w4
+  vmi(CM,13,2*4096,1+c_s[13]*0x10000+256*c_r[13],0);// words
+  vmi(CM,14,  4096,1+c_s[14]*0x10000+256*c_r[14],0);// w4
+  vmi(CM,15,2*4096,1+c_s[15]*0x10000+256*c_r[15],0);// w4
+  vmi(CM,16,2*4096,1+c_s[16]*0x10000+256*c_r[16],0);// w4
+  vmi(CM,17,2*4096,1+c_s[17]*0x10000+256*c_r[17],0);// w4
+  vmi(CM,18,8*4096,1+c_s[18]*0x10000+256*c_r[18],0);// o6
+  vmi(CM,19,8*4096,1+c_s[19]*0x10000+256*c_r[19],0);// o8
+  vmi(CM,20,8*4096,1+c_s[20]*0x10000+256*c_r[20],0);// o13
   for (i=0;i<5;i++)
       vmi(SCM,i,16,0,0);
-  //vmi(SCM,5,17,0,0);
   vmi(MX,0,m_s[0]+256*m_e[0]+0x1000000*m_m[0], 264,0);
   vmi(MX,1,m_s[1]+256*m_e[1]+0x1000000*m_m[1], 256,0);
   vmi(MX,2,m_s[2]+256*m_e[2]+0x1000000*m_m[2], 1024,0);
