@@ -1,3 +1,6 @@
+pre12
+ Change StationaryMap,ContextMap
+ Change jpeg.cfg/test3txt.cfg
 jpg/text parameters
  -Change jpg/text parameters.
  -Add changelog
